--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta name="apple-mobile-web-app-title" content="TimeLine" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
 
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="red" />
-  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="pink" />
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000000" />
 
 
 </head>
